Description of your changes

--- a/Public/meetingV-Customer.html
+++ b/Public/meetingV-Customer.html
@@ -354,14 +354,15 @@
                 const meetingItem = document.createElement('div');
                 meetingItem.classList.add('meeting-item');
                 meetingItem.innerHTML = `
-                    <h4>${meeting.MeetingType}</h4><br><br>
-                    <i class="fas fa-calendar"></i> &nbsp;&nbsp;Date: ${meeting.Date} at ${meeting.Time}</p><br>
-                    <i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp;Location: ${meeting.Location}</p><br>
-                    <i class="fas fa-user"></i> &nbsp;&nbsp;Partner: ${meeting.Partner}</p><br>
-                    <p class="icon-phone" id="Phone_${meeting._id}">&nbsp;&nbsp;Customer's phone: Fetching...</p><br>
-                    ${meeting.AssetSelect ? `<i class="fas fa-home"></i> &nbsp;&nbsp;AssetDetails: ${meeting.AssetSelect} <br><br>` : ''}
-                    <button class="btn1 btn1-primary" id="sub1" onclick="deleteMeeting('${meeting._id}')">Delete Meeting</button>
-                `;
+                <h4>${meeting.MeetingType}</h4><br><br>
+                <p><i class="fas fa-calendar"></i> &nbsp;&nbsp;Date: ${meeting.Date} at ${meeting.Time}</p><br>
+                <p><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp;Location: ${meeting.Location}</p><br>
+                <p><i class="fas fa-user"></i> &nbsp;&nbsp;Partner: ${meeting.Partner}</p><br>
+                <p><i class="fas fa-phone"></i> &nbsp; Customer's phone: 052-7688854</p><br>
+                ${meeting.AssetSelect ? `<p><i class="fas fa-home"></i> &nbsp;&nbsp;AssetDetails: ${meeting.AssetSelect}</p><br>` : ''}
+                <button class="btn1 btn1-primary" id="sub1" onclick="deleteMeeting('${meeting._id}')">Delete Meeting</button>
+            `;
+
 
                 meetingList.appendChild(meetingItem);
 
