Description of your changes

--- a/Public/meetingV-Manager.html
+++ b/Public/meetingV-Manager.html
@@ -402,7 +402,7 @@ const fetchCustomerData = (customerId, meetingId) => {
                     customerFullNameElement.innerHTML = `&nbsp;&nbsp;Customer Name: ${customerFullName}`;
                 }
                 if (customerPhoneElement) {
-                    customerPhoneElement.innerHTML = `&nbsp;&nbsp;Customer's phone ${customerPhone}`;
+                    customerPhoneElement.innerHTML = `&nbsp;&nbsp;Customer's phone: ${customerPhone}`;
                 }
             } else {
                 console.error('Customer not found');
