Description of your changes

--- a/Public/blog-Customer.html
+++ b/Public/blog-Customer.html
@@ -293,8 +293,7 @@
 							<li>
 								<a>Assets</a>
 								<ul class="fh5co-sub-menu">
-									<li><a href="all-Customer.html">All</a></li>
-									<li><a href="filter-Customer.html">Filter</a></li>
+									<li><a href="all-Customer.html">Search</a></li>
 									<li><a href="new-Customer.html">New</a></li>
 									<li><a href="sale-Customer.html">Sale</a></li>
 								</ul>
@@ -323,7 +322,7 @@
 			   			<div class="row">
 				   			<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 			   				<div class="slider-text-inner">
-		   						<h2 class="heading-title">Our Blog</h2>
+		   						<h2 class="heading-title">Blog</h2>
 		   						<p class="fh5co-lead"><i class="icon-heart3"></i> </p>
 			   				</div>
 			   			</div>
