--- a/Public/meetingV-Customer.html
+++ b/Public/meetingV-Customer.html
@@ -208,8 +208,7 @@
                     <li>
                         <a>Assets</a>
                         <ul class="fh5co-sub-menu">
-                            <li><a href="all-Customer.html">All</a></li>
-                            <li><a href="filter-Customer.html">Filter</a></li>
+                            <li><a href="all-Customer.html">Search</a></li>
                             <li><a href="new-Customer.html">New</a></li>
                             <li><a href="sale-Customer.html">Sale</a></li>
                         </ul>
