--- a/Public/HomeManager.html
+++ b/Public/HomeManager.html
@@ -65,7 +65,7 @@
 								<li>
 									<a>Assets</a>
 									<ul class="fh5co-sub-menu">
-										<li><a href="all-Manager.html">All</a></li>
+										<li><a href="all-Manager.html">View</a></li>
 										<li><a href="addA-Manager.html">Add</a></li>
 										<li><a href="updateA-Manager.html">Update</a></li>
 									</ul>
@@ -74,8 +74,8 @@
 								<li>
 									<a>Deals</a>
 									<ul class="fh5co-sub-menu">
-										<li><a href="addD-Manager.html">Add Deal</a></li>
-										<li><a href="DealsV-Manager.html">View Deals</a></li>
+										<li><a href="addD-Manager.html">Add</a></li>
+										<li><a href="DealsV-Manager.html">View</a></li>
 									</ul>
 								</li>
 								<li><a href="blog-Manager.html">Blog</a></li>
