--- a/Public/addD-manager.html
+++ b/Public/addD-manager.html
@@ -83,7 +83,7 @@
                         <li>
                             <a>Assets</a>
                             <ul class="fh5co-sub-menu">
-                                <li><a href="all-Manager.html">All</a></li>
+                                <li><a href="all-Manager.html">View</a></li>
                                 <li><a href="addA-Manager.html">Add</a></li>
                                 <li><a href="updateA-Manager.html">Update</a></li>
                             </ul>
@@ -92,8 +92,8 @@
                         <li>
                             <a>Deals</a>
                             <ul class="fh5co-sub-menu">
-                                <li><a href="addD-Manager.html">Add Deal</a></li>
-                                <li><a href="DealsV-Manager.html">View Deals</a></li>
+                                <li><a href="addD-Manager.html">Add</a></li>
+                                <li><a href="DealsV-Manager.html">View</a></li>
                             </ul>
                         </li>
                         <li><a href="blog-Manager.html">Blog</a></li>
@@ -137,7 +137,7 @@
                            <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
                                <div class="slider-text-inner">
                                    <h2 class="heading-title">Deals</h2>
-                                   <p class="fh5co-lead"> Coming Soon <i class="icon-heart3"></i> </p>
+                                   <p class="fh5co-lead"><i class="icon-heart3"></i> </p>
                                </div>
                            </div>
                        </div>
