--- a/Public/blog-Manager.html
+++ b/Public/blog-Manager.html
@@ -306,7 +306,7 @@
 								<li>
 									<a>Assets</a>
 									<ul class="fh5co-sub-menu">
-										<li><a href="all-Manager.html">All</a></li>
+										<li><a href="all-Manager.html">View</a></li>
 										<li><a href="addA-Manager.html">Add</a></li>
 										<li><a href="updateA-Manager.html">Update</a></li>
 									</ul>
@@ -315,8 +315,8 @@
 								<li>
 									<a>Deals</a>
 									<ul class="fh5co-sub-menu">
-										<li><a href="addD-Manager.html">Add Deal</a></li>
-										<li><a href="DealsV-Manager.html">View Deals</a></li>
+										<li><a href="addD-Manager.html">Add</a></li>
+										<li><a href="DealsV-Manager.html">View</a></li>
 									</ul>
 								</li>
 								<li><a href="blog-Manager.html">Blog</a></li>
@@ -359,7 +359,7 @@
 								<div class="row">
 									<div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
 										<div class="slider-text-inner">
-											<h2 class="heading-title">Our Blog</h2>
+											<h2 class="heading-title">Blog</h2>
 											<p class="fh5co-lead"><i class="icon-heart3"></i> </p>
 										</div>
 									</div>
@@ -377,7 +377,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-							<h3>Our Blog</h3>
+							<h3>Blog</h3>
 						</div>
 					</div>
 				</div>
