Description of your changes

--- a/Public/meetingV-Customer.html
+++ b/Public/meetingV-Customer.html
@@ -357,7 +357,7 @@
                 <p><i class="fas fa-calendar"></i> &nbsp;&nbsp;Date: ${meeting.Date} at ${meeting.Time}</p><br>
                 <p><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp;Location: ${meeting.Location}</p><br>
                 <p><i class="fas fa-user"></i> &nbsp;&nbsp;Partner: ${meeting.Partner}</p><br>
-                <p><i class="fas fa-phone"></i> &nbsp; Customer's phone: 052-7688854</p><br>
+                <p><i class="fas fa-phone"></i> &nbsp; Partner's phone: 052-7688854</p><br>
                 ${meeting.AssetSelect ? `<p><i class="fas fa-home"></i> &nbsp;&nbsp;AssetDetails: ${meeting.AssetSelect}</p><br>` : ''}
                 <button class="btn1 btn1-primary" id="sub1" onclick="deleteMeeting('${meeting._id}')">Delete Meeting</button>
             `;
