Description of your changes

--- a/Public/Dashbord.html
+++ b/Public/Dashbord.html
@@ -747,7 +747,7 @@ document.addEventListener("DOMContentLoaded", function() {
             data: {
                 labels: allMonths,
                 datasets: [{
-                    label: 'Deals per Month (divided by 2)',
+                    label: 'Deals per Month',
                     data: counts,
                     backgroundColor: 'rgba(75, 192, 192, 0.5)',
                     borderColor: 'rgb(75, 192, 192)',
